lagt til endringer

--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
 		<title>Aalen-IT</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+	    <meta property="og:title" content="Aalen IT">
+	    <meta property="og:site_name" content="aalen-it.no">
+	    <meta property="og:image" content="/logo/Aalen_logo_1200x600.png">
+	    <meta property=og:image:alt content="/logo/Aalen_logo_1200x600.png">
+	    <meta property="og:description" content="Webutvikling og IT-tjenester!">
+	    <meta name="description" content="Webutvikling og IT-tjenester!">
+	    <meta name="keywords" content="Webutvikling, IT-tjenester, internettsider, nettside, webside, opprett en nettside, Bergen">
+
+
 		<link rel="manifest" href="/manifest.json">
+		<link href="https://fonts.googleapis.com/css?family=Anonymous+Pro" rel="stylesheet"> 
 		<link rel="icon" href="/images/3b5d818f-bde1-9dd5-09f1-818e474f8865.webPlatform.png" sizes="192x192" type="image/png">
 	    <!-- Add to home screen for Safari on iOS -->
 	    <meta name="apple-mobile-web-app-capable" content="yes">
@@ -22,6 +33,7 @@
 	    <meta name="msapplication-TileColor" content="#512c64">		
         <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<meta name="google-site-verification" content="laH0Dt5V1PVuFYop_uiiC39rP6evzjNfy5TLqyw6-FI" />
 
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
@@ -35,7 +47,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Aalen IT</h1>
-						<p>Web utvikling! &nbsp;&bull;&nbsp; IT-tjenester! &nbsp;&bull;&nbsp; Telefon: <a href="tel:+4740615713">40 61 57 13</a> </p>
+						<p>Webutvikling! &nbsp;&bull;&nbsp; <a href="https://kalli.no/butikk/">IT-tjenester!</a> &nbsp;&bull;&nbsp; Telefon: <a href="tel:+4740615713">40 61 57 13</a> </p>
 						<nav>
 							<ul>
 								<li><a href="https://www.linkedin.com/in/peder-aalen/" class="icon fa-linkedin"><span class="label">Linked In</span></a></li>
